@@ -1,4 +1,4 @@
-2.1.24-0 @11/27/2011 15:00:00 UTC@
+2.1.25-0 @11/27/2011 15:30:00 UTC@
 2.1.23-0 @11/26/2011 21:25:00 UTC@
 2.1.22-0 @11/26/2011 20:45:00 UTC@
 2.1.21-0 @11/26/2011 16:10:00 UTC@
