@@ -1,5 +1,8 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2011-11-27 patrick     Changed the configuration of gadget::EventEmitter to be
+                       separate from gadget::InputManager.
+                       NEW VERSION: 2.1.25
 2011-11-27 patrick     Renamed gadget::InputHandler to gadget::EventEmitter.
                        NEW VERSION: 2.1.24
 2011-11-26 patrick     Implemented new digital device multi-click handling in
